src-ken&y/objects/Allocation_Profile__c.object
<CustomObject>
    <customHelpPage>HelpAllocationProfiles</customHelpPage>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipName>Allocation_Policies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Received__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Date Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Expiration Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item</label>
        <referenceTo>Item__c</referenceTo>
        <relationshipName>Allocation_Policies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Location</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lot_Number__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Lot Number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rental__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Rental</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unique__c</fullName>
        <label>Unique</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Used__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Used</label>
        <type>Checkbox</type>
    </fields>
    <label>Allocation Profile</label>
    <nameField>
        <label>Allocation Profile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Allocation Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>